spade-tests/src/snapshots/spade_tests__ast_lowering__generics_in_ports_can_not_be_bare.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Non-port in port struct
  ┌─ testinput:2:8
  │
1 │ struct port P<T> {
  │        ---- All members of a port must be ports
2 │     x: T
  │        ^ This is not a port type
  │
  = Consider making x a wire
  │
2 │     x: &T
  │        +


